--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 .NavBar {
     font-family: sans-serif;
     display: flex;
-    background-color: lightblue;
+    background-color: black;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -11,12 +11,12 @@
 
   #title {
     font-size: 30px;
-    color: black;
+    color: white;
     text-decoration: underline;
   }
 
   .Links {
-    color: black;
+    color: white;
     font-size: 15px;
     text-decoration: none;
     margin-right: 15px;
