--- a/src/components/Routines.css
+++ b/src/components/Routines.css
@@ -7,6 +7,8 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    margin-top: 24px;
+    opacity: 90%;
 }
 
 .activities {
@@ -15,4 +17,5 @@
 
 #ActivityBox2 {
     color: black;
+    opacity: 90%;
 }
