--- a/src/components/users/Login.css
+++ b/src/components/users/Login.css
@@ -39,3 +39,11 @@ button {
 button:hover {
   background-color: lightgrey;
 }
+
+#WelcomePage{
+  color: black;
+}
+
+#LogInPage {
+  color: black;
+}
