--- a/src/components/users/MyRoutines.css
+++ b/src/components/users/MyRoutines.css
@@ -1,13 +1,27 @@
 * {
   font-family: sans-serif;
+  color: black;
+}
+
+#WelcomeToMyRoutinesMain {
+  color: black;
+  margin-top: 24px;
+  text-align: center;
+  background-color: lightgrey;
+  color: black;
+  width: 640px;
+  padding: 10px;
+  border: 5px solid black;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 90%;
 }
 
 #WelcomeToMyRoutines {
-  color: white;
-  font-size: 32px;
-  line-height: 24px;
-  text-decoration: underline;
+  color: black;
 }
+
 
 #Name {
   text-align: center;
@@ -26,3 +40,18 @@
   transform: translateX(-50%);
   opacity: 90%;
 }
+
+#Activities {
+  margin-top: 400px;
+  text-align: center;
+  background-color: lightgrey;
+  color: black;
+  width: 640px;
+  padding: 10px;
+  border: 5px solid black;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 90%;
+}
+
