--- a/src/components/DeleteRoutine.css
+++ b/src/components/DeleteRoutine.css
@@ -1,4 +1,4 @@
-#deleteButton {
+/* #deleteButton {
   margin-top: 750px;
   text-align: center;
   background-color: lightgrey;
@@ -9,4 +9,4 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-}
+} */
