--- a/src/components/EditRoutine.css
+++ b/src/components/EditRoutine.css
@@ -10,12 +10,13 @@
   left: 50%;
   transform: translateX(-50%);
   opacity: 90%;
-}
+} */
 
 h5 {
   font-size: 20px;
-} */
+  color: white;
+}
 
 * {
-  color: white;
+  color: black;
 }
