--- a/src/components/EditRoutineActivity.css
+++ b/src/components/EditRoutineActivity.css
@@ -1,4 +1,4 @@
-#EditRoutineActivityBox {
+/* #EditRoutineActivityBox {
     background-color: lightgrey;
     color: black;
     width: 640px;
@@ -9,6 +9,6 @@
     transform: translateX(-50%);
     margin-top: 70px;
     opacity: 90%;
-  }
+  } */
 
   
